--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,3 +1,45 @@
+.p-menuitem-text {
+  color: #edf2f7 !important;
+}
+
+.p-menuitem-link:hover {
+  background-color: #2d3748 !important;
+}
+
+.p-menuitem-icon {
+  color: #4f5566 !important;
+}
+
+/* -------------------------------- CHECKBOX -------------------------------- */
+
+.p-checkbox .p-checkbox-box.p-highlight {
+  border-color: #646215;
+  background: #646215;
+}
+
+.p-checkbox:not(.p-checkbox-disabled)
+  .p-checkbox-box.p-highlight:hover {
+  border-color: #46440e;
+  background: #46440e;
+  color: #ffffff;
+}
+
+/* --------------------------------- BUTTON --------------------------------- */
+
+.p-button {
+  color: #ffffff;
+  background: #646215;
+  border: 1px solid #646215;
+}
+
+.p-button:enabled:hover {
+  background: #46440e;
+  color: #ffffff;
+  border-color: #46440e;
+}
+
+/* ---------------------------- RESPONSIVE TABLE ---------------------------- */
+
 .datatable-responsive-demo
   .p-datatable-responsive-demo
   .p-datatable-tbody
@@ -54,27 +96,4 @@
     > td:last-child {
     border-bottom: 1px solid var(--surface-d);
   }
-}
-.p-menuitem-text {
-  color: #edf2f7 !important;
-}
-
-.p-menuitem-link:hover {
-  background-color: #2d3748 !important;
-}
-
-.p-menuitem-icon {
-  color: #4f5566 !important;
-}
-
-.p-checkbox .p-checkbox-box.p-highlight {
-  border-color: #498205;
-  background: #498205;
-}
-
-.p-checkbox:not(.p-checkbox-disabled)
-  .p-checkbox-box.p-highlight:hover {
-  border-color: #3b6903;
-  background: #3b6903;
-  color: #ffffff;
 }
